trigger_Framework_virtual

--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -3,10 +3,14 @@ public class LeadTriggerHandler extends TriggerHandler {
     List<Lead> newLeads;
 
     public LeadTriggerHandler(){
+        //constructor
+        //this.setMaxLoopCount(1);
         
     }
     
     public override void beforeInsert() {
+        system.debug('leadTriggerHandler : beforeInsert');
+        System.debug('beforeInsert Leadnew'+ Trigger.new);
         				
     }
     public override void beforeUpdate() {
@@ -16,6 +20,16 @@ public class LeadTriggerHandler extends TriggerHandler {
         				
     }
     public override void afterInsert() {
+        system.debug('leadTriggerHandler afterinsert running');
+        System.debug('afterInsert Leadnew'+ Trigger.new);
+       
+
+        Account x = new Account(name='gopi');
+        //TriggerHandler.bypass('AccountTriggerHandler');
+        insert x;
+        //TriggerHandler.clearBypass('AccountTriggerHandler');
+        system.debug('account'+x);
+        
         				
     }
     public override void afterUpdate() {
